--- a/www/app.css
+++ b/www/app.css
@@ -74,20 +74,32 @@ td, th{
 }
 
 /*** page statistic title ***/
-/*.alert-danger, .alert-error, .bg-red, .callout.callout-danger, .label-danger, .modal-danger .modal-body{
-  background-color: #ffffff !important;
-  color: #282f32;
-}*/
+#page-title{
+  font-size: 40px;
+  margin: 0px;
+  letter-spacing: 0px;
+}
+
+#title-box{
+  height: auto;
+  vertical-align: middle;
+}
 
 div.box{
   box-shadow: none;
   border-top: 0px;
   margin-top: 5px;
+
 }
 
 /*** subheaders ***/
-.bg-navy{
-  background-color: #3f3f49 !important;
+.subheader{
+  padding: 0px;
+  border-bottom: 1px solid #cccccc;
+}
+
+.h4,h4{
+    text-transform:full-width;
 }
 
 /*** valuebox ***/
